<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.tang.dialogcommonlyused.widget.MyToolbar
        android:id="@+id/toolbar_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginTop="@dimen/y20"
        android:text="@string/pay_commodityInfo"
        android:textColor="@color/color333"
        android:textSize="@dimen/x28" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginTop="@dimen/y40"
        android:text="@string/pay_commodityName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginTop="@dimen/y10"
        android:text="@string/pay_commodityPrice" />

    <Button
        android:id="@+id/btn_pay_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y90"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginTop="@dimen/y40"
        android:layout_marginRight="@dimen/x30"
        android:background="@color/colorffb"
        android:gravity="center"
        android:text="@string/payPwd"
        android:textColor="@color/white"
        android:textSize="@dimen/x30" />

</LinearLayout>